src/objects/EM_TimeSheet__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <color>#33CC00</color>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Submit</fullName>
                    <isActive>false</isActive>
                    <label>Submit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EM_Total_Hours_worked__c</fullName>
        <label>Total Hours worked</label>
        <summarizedField>Day__c.No_of_Hours__c</summarizedField>
        <summaryForeignKey>Day__c.EM_TimeSheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EM_Week_day_Count__c</fullName>
        <label>Week day Count</label>
        <summaryForeignKey>Day__c.EM_TimeSheet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>LMS_Employee__c</referenceTo>
        <relationshipLabel>Time Sheets</relationshipLabel>
        <relationshipName>Time_Sheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Time Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>Time Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_of_Week_days_exceed_7</fullName>
        <active>true</active>
        <errorConditionFormula>EM_Week_day_Count__c  &gt; 7</errorConditionFormula>
        <errorMessage>No of Week days exceed 7</errorMessage>
    </validationRules>
</CustomObject>